fixed background on tablet and capital  in detail

--- a/client/src/features/countries/country.css
+++ b/client/src/features/countries/country.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-items: flex-end;
-    padding: 15px 0 10px 15px;
+    padding: 5px 15px 10px 15px;
 }
 
 .countryInfoItem {
