--- a/client/src/features/countries/countryDetail.css
+++ b/client/src/features/countries/countryDetail.css
@@ -114,6 +114,10 @@
 
 /* tablet size devices*/
 @media (min-width: 376px) and (max-width: 1023px) {
+    .detailMainContainer {
+        height: 900px;
+    }
+
     .detailContainer {
         flex-direction: column;
     }
