--- a/client/src/features/countries/countryList.css
+++ b/client/src/features/countries/countryList.css
@@ -9,12 +9,13 @@
 
 .countriesContainer.nightMode {
     background-color: hsl(207, 26%, 17%);
+    color: hsl(0, 0%, 98%);
 }
 
 .countryContainer {
     width: 270px;
     margin: 20px 40px;
-    height: 290px;
+    height: 300px;
     border-radius: 10px;
     background-color: white;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
